--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,3 +7,5 @@ version = "0.1.0"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+bzip2 = "0.4"
+quick-xml = "0.20.0"
